# magnet-linux

./: LICENSE  README.md
doc/: bootstrap.md  p2p-hosting.md  store-layout.md  venv.md
magpkg/: Cargo.toml
magpkg/src/: btfetcher.rs  btseed.rs  errors.rs  imports.rs  main.rs  package.rs  store.rs
